fix: TablePopulator public access, Chart.js SRI hash removed, and all local changes